--- a/032/index.html
+++ b/032/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="mybox">😂</div>
+    <div class="press"></div>
     <script src="script.js"></script>
 </body>
 </html>
